Coverity analysis defect 163728: Wrong operator used

XMLWordPrintableJSON

    • Query Optimization
    • Fully Compatible
    • ALL
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Wrong operator used

      Inadvertent use of the wrong operator results in a likely logic error. Common interchanges include bit-or and bit-and, left-shift and right-shift. Wrong operator used in expression
      /data/mci/ca51a75ec01e2db4c86c36e81ffcbc1a/bazel_cache/9609e6a8b9a79735a5ea9f2aad32fa3a/execroot/_main/src/mongo/db/query/stats/rand_utils_new.cpp:274: CONSTANT_EXPRESSION_RESULT 163728 "(b << 16) & 255" is always 0 regardless of the values of its operands. This occurs as an initializer.

            Assignee:
            Andi Wang (Inactive)
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: