SERVER-107934: Coverity analysis defect 163728: Wrong operator used (#39479)

GitOrigin-RevId: 92e54f45dab60dc4a017547d2462d468660bb771